--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
       .then(res => res.json())
       .then(res => {
         let tmpl = `
-          <img src="${res.image}"" style="float:right; margin:50px 0; width:100%;">
+          <img src="${res.image}" style="margin-bottom:50px; width:100%;">
           <h1>${res.name}</h1>
           <div>
             ${res.description}
